images address fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ height="700" width="1050"><br>
 the KEGG database. This will download the file and for the next
 time will use the downloaded file.<br>
 <img alt="open from web"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/openFromWeb.png"
+src="images/openFromWeb.png"
 height="250" width="910"><br>
 </p>
 <h3><a href="#How_to">back to top</a></h3>
@@ -149,7 +149,7 @@ of previously loaded methylation files listed under <b><big>Load
 -&gt; Methylation</big>.</b><br>
 </p>
 <img alt="load methylation"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/loadMethylation.png"
+src="images/loadMethylation.png"
 height="700" width="1050"><br>
 The genes in the input file that match with the genes in the pathway
 are colored according to their beta values. Blue color codes the
@@ -247,7 +247,7 @@ any of previously loaded expression files listed under <b><big>Load
 </p>
 <br>
 <img alt="load expression"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/loadExpression.png"
+src="images/loadExpression.png"
 height="700" width="1050"> <br>
 <br>
 The genes in the input file that match with the genes in the pathway
@@ -276,7 +276,7 @@ the columns separator, number of fileds (columns), the column
 containing sample IDs, and the fileds that you like to be shown.<br>
 </p>
 <img alt="samples info dialog"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/samplesInfo.png"
+src="images/samplesInfo.png"
 height="427" width="567"><br>
 If a valid file is loaded and the samples IDs in the input file
 matches with the ones loaded on the pathway, the additional
@@ -284,7 +284,7 @@ information for each sample is displayed when you navigate through
 samples.<br>
 <br>
 <img alt="sample info example"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/samplesInfoExample.png"
+src="images/samplesInfoExample.png"
 height="700" width="1050"><br>
 <br>
 <h3><a href="#How_to">back to top</a></h3>
@@ -303,7 +303,7 @@ a histogram for the beta-values or expression values of all
 samples for the targeted gene. <br>
 </p>
 <p><img alt="histogram"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/histogram-betaValues.png"
+src="images/histogram-betaValues.png"
 height="514" width="914">&nbsp;<br>
 </p>
 <p>The third option <b><big>Barplot for raw data</big> </b>is
@@ -312,7 +312,7 @@ samples.</p>
 <br>
 <br>
 <img alt="barplot"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/barplot-betaValues.png"
+src="images/barplot-betaValues.png"
 height="514" width="914"><br>
 The fourth option Genomic region details is available for the genes
 with a cyan-colored border. A gene with a cyan-colored border show
@@ -324,7 +324,7 @@ this gene - labeled with the genomic region tag - shows up on the
 screen.<br>
 <br>
 <img alt="genomic regions"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/genomicRegions.png"
+src="images/genomicRegions.png"
 height="344" width="614"><br>
 <br>
 The last option <big><b>Multiple-sample view</b></big> is explained
@@ -341,7 +341,7 @@ file. The genes that exist in the targeted pathway will be
 highlighted with a red text and red border.<br>
 </p>
 <p><img alt="highlight genes"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/highlightGenes.png"
+src="images/highlightGenes.png"
 height="700" width="1050"></p>
 <h3><a href="#How_to">back to top</a></h3>
 <br>
@@ -401,7 +401,7 @@ quarter of the gene sets it to show next samples on the right top
 side of it.<br>
 </p>
 <img alt="multiple-sample view"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/multipleSampleView.png"
+src="images/multipleSampleView.png"
 height="700" width="1050"><br>
 If you hover the mouse over the extended rectangles, a tooltip shows
 the sample that rectangle is representing.<br>
