image problem fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ the current pathway in a new tab</a></h3>
 <h2><a name="Open_a_KGML_file_"></a>Open a KGML file</h2>
 <p>There are two options to open a KGML file:<br>
 <img alt="open KGML"
-src="file:///Users/Behrooz/Desktop/PiiL-screenshots/openKGML.png"
+src="images/openKGML.png"
 height="700" width="1050"><br>
 </p>
 <p>1) Open an already downloaded KGML file from your hard drive.<br>
