--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a KGML file</a></h3>
 <h3><a href="#Right-click_menu_options_">Right-click menu options</a><br>
 </h3>
 <h3><a
-href="file:///Users/Behrooz/PerspolisFiles/PiiL%20tutorial.html#Highlight_a_set_of_genes_in_a_pathway_">Highlight
+href="#Highlight_a_set_of_genes_in_a_pathway_">Highlight
 
 a set of genes in a pathway</a></h3>
 <h3><a href="#Export_pathway_to_image_">Export pathway to image</a></h3>
