--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 
 too<u>L</u></h1>
-<p>PiiL is an open-source (the source code is available here) and
+<p>PiiL is an open-source (the source code is available <a
+href="https://github.com/behroozt/PiiL.git">here</a>) and
 biologist-friendly tool. You can easily <i>PiiL</i> your data;
 i.e. load your DNA methylation and/or RNA expression data over any
 of the KEGG pathways and let PiiL color-code it for you to
