source code link bolded

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 
 too<u>L</u></h1>
-<p>PiiL is an open-source (the source code is available <a
-href="https://github.com/behroozt/PiiL.git">here</a>) and
+<p>PiiL is an open-source (<b>the source code is available </b><b><a
+href="https://github.com/behroozt/PiiL.git">here</a></b>) and
 biologist-friendly tool. You can easily <i>PiiL</i> your data;
 i.e. load your DNA methylation and/or RNA expression data over any
 of the KEGG pathways and let PiiL color-code it for you to
