Pathway in singular

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>PiiL tutorial</title>
 </head>
 <body>
-<h1>Welcome to PiiL : <u>P</u>athways <u>i</u>nteractive data v<u>i</u>sualization
+<h1>Welcome to PiiL : <u>P</u>athway <u>i</u>nteractive data v<u>i</u>sualization
 
 
 
