Tutorial page revised

--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <title>PiiL tutorial</title>
   </head>
   <body>
-    <table style="border-spacing: 20px;">
+    <table cellspacing="15">
       <tbody>
         <tr>
-          <td><img alt="logo" src="images/logo.png" height="172" align="left"
-              width="180"></td>
+          <td>
+            <h1><font color="#333333"><big> <u>P</u>athway <u>i</u>nteractive
+
+
+                  v<u>i</u>sualization too<u>L</u> </big></font></h1>
+          </td>
           <td> <br>
           </td>
-          <td>
-            <h1> <br>
-            </h1>
-            <h1><font color="#333333"><big> <u>P</u>athway <u>i</u>nteractive
-                  data v<u>i</u>sualization too<u>L</u> </big></font></h1>
+          <td> <br>
           </td>
+          <td><img alt="logo" src="images/logo.png" height="136" align="left"
+              width="168"></td>
         </tr>
       </tbody>
     </table>
@@ -117,6 +119,18 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -132,9 +146,33 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -246,12 +284,36 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -329,6 +391,18 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
           -&gt; Gene Expression</big>.</b><br>
     </p>
     <br>
@@ -381,6 +455,18 @@
       information on your selected database: GeneCards, Pubmed or
       Ensemble.<br>
       The second option <big><b>Histogram for all samples </b></big>makes
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -452,6 +538,18 @@
     each tab containing the pathway, the meta data loaded over that and
     the list of genes that were matched in each pathway. By clicking on
     <b><big>Export -&gt; List of matched genes in each pathway</big> </b>you
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
