right-click menu fig resized

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <br>
     <div align="center"><img alt="logo"
-        src="images/manual-header.png" height="173"
+        src="../Documents/Manfred/graphics/pill-manual.png" height="173"
         width="628"><br>
     </div>
     <h1 align="left">Welcome to PiiL!</h1>
@@ -472,8 +472,8 @@
       information on your selected database: GeneCards, Pubmed or
       Ensemble.</p>
     <img alt="right-click menu options"
-      src="images/rightClickMenu.png" height="514"
-      width="914">
+      src="../Desktop/PiiL-screenshots/rightClickMenu.png" height="700"
+      width="1050">
     <p>The second option <big><b>Histogram for all samples </b></big>makes
 
 
