--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
       information on your selected database: GeneCards, Pubmed or
       Ensemble.</p>
     <img alt="right-click menu options"
-      src="../Desktop/PiiL-screenshots/rightClickMenu.png" height="700"
+      src="images/rightClickMenu.png" height="700"
       width="1050">
     <p>The second option <big><b>Histogram for all samples </b></big>makes
 
