back to end added to the buttom of index.html

--- a/index.html
+++ b/index.html
@@ -655,5 +655,6 @@
       is actually a <i>piil </i>(elephant) standing next to a hosrse
       (knight)! <br>
     </p>
+    <h3><a href="#How_to">back to top</a></h3>
   </body>
 </html>
