tutorail header changed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <br>
     <div align="center"><img alt="logo"
-        src="images/manual-header.png" height="173"
-        width="628"><br>
+        src="images/tutorialHeader.png" height="370"
+        width="614"><br>
     </div>
     <h1 align="left">Welcome to PiiL!</h1>
     <h1> </h1>
