--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       <h3><a href="#Load_methylation_data_">Load methylation data</a></h3>
       <h3><a href="#Load_expression_data_">Load expression data</a></h3>
       <h3><a href="#Load_samples_information_">Load samples information</a></h3>
-      <h3><a href="#Right-click_menu_options_">Right-click menu options</a><br>
-      </h3>
-      <h3><a href="#Highlight_a_set_of_genes_in_a_pathway_">Highlight a
+      <h3><a href="#Navigate_through_samples_">Navigate through samples</a></h3>
+      <h3><a href="#Right-click_menu_options_">Right-click menu options</a></h3>
+      <h3><a href="#Multiple-sample_view_">Multiple-sample view</a></h3>
+      <h3><a href="#Group-wise_view_">Group-wise view</a></h3>
+      <h3><a href="#Load_a_list_of_genes_to_be_highlighted">Highlight a
           set of genes in a pathway</a></h3>
       <h3><a href="#Export_pathway_to_image_">Export pathway to image</a></h3>
       <h3><a href="#Export_list_of_matched_genes_in_each_">Export list
@@ -44,8 +46,7 @@
       <h3><a href="#Taking_a_snapshot">Take a snapshot from PiiL</a><br>
       </h3>
       <h3><a href="#Cite_us_">Cite us</a></h3>
-      <h3><a href="#What_the_name_PiiL_means">Know what the name PiiL
-          means</a><br>
+      <h3><a href="#What_the_name_PiiL_means">Decode the name "PiiL"</a><br>
       </h3>
     </blockquote>
     <p><br>
@@ -134,6 +135,8 @@
 
 
 
+
+
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -171,9 +174,13 @@
 
 
 
+
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
 
 
 
@@ -264,6 +271,8 @@
 
 
 
+
+
           -&gt; Methylation</big>.</b><br>
     </p>
     <img alt="load methylation" src="images/loadMethylation.png"
@@ -331,12 +340,16 @@
 
 
 
+
+
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
 
 
 
@@ -458,6 +471,8 @@
 
 
 
+
+
           -&gt; Gene Expression</big>.</b><br>
     </p>
     <br>
@@ -490,7 +505,7 @@
       the 'columns separator' and the column containing sample IDs.<br>
     </p>
     <img alt="samples info dialog" src="images/loadSamplesInfo.png"
-      height="344" width="550"><br>
+      height="427" width="567"><br>
     If a valid file is loaded and the samples IDs in the input file
     matches with the ones loaded on the pathway, the additional
     information for each sample is displayed when you navigate through
@@ -503,7 +518,25 @@
     <h3><a href="#How_to">back to top</a></h3>
     <p><br>
     </p>
-    <h2><a name="Right-click_menu_options_"></a>Right-click menu options</h2>
+    <h2><a name="Navigate_through_samples_"></a>Navigate through samples
+      <br>
+    </h2>
+    <p>When the meta data is loaded you can navigate through samples
+      using the buttons on the left side panel to see the status of the
+      genes in the pathway for each sample. The 'Play' button shows the
+      samples consecutively. If the 'Repeat' checkbox is checked the
+      playback is repeated from the beginning when the last sample is
+      shown. The speed of playback can be set using the slider. A short
+      explanation (tooltip) is shown when hovering and staying over side
+      panel items with the mouse.<br>
+    </p>
+    <img alt="navigate"
+      src="images/navigateSamples.png"
+      height="700" width="1050">
+    <h3><a href="#How_to">back to top</a></h3>
+    <h2><a name="Right-click_menu_options_"></a></h2>
+    <br>
+    <h2>Right-click menu options</h2>
     <p>A menu is available for all the genes when you right-click on the
       gene rectangle. The first option is <b><big>Check this gene on
           ...</big> </b>which is enabled for all the genes. This opens
@@ -513,6 +546,8 @@
     <img alt="right-click menu options" src="images/rightClickMenu.png"
       height="700" width="1050">
     <p>The second option <big><b>Histogram for all samples </b></big>makes
+
+
 
 
 
@@ -574,11 +609,70 @@
     <br>
     The last option <big><b>Multiple-sample view</b></big> is explained
     in <a href="#Multiple-sample_view">this</a> section.<br>
-    <br>
     <h3><a href="#How_to">back to top</a></h3>
+    <h2><br>
+    </h2>
+    <h2><a name="Multiple-sample_view_"></a><b>Multiple-sample view</b></h2>
+    <p>This function visualizes the metadata for the current sample and
+      the next 10 samples, for the selected or all (not recommended
+      becuase the pathway will look very crowded) genes. If the number
+      of samples from the current one to the end of the sample set is
+      less than 10, as many as possible are displayed.<br>
+      To select a gene that is color-coded (i.e. has some metadata
+      loaded), double click on the gene rectangle. The selected genes'
+      borders turn to yellow. <br>
+      Hint: To choose the direction of expansion for multiple-sample
+      view, double-click on your desired quarter of the gene rectangle
+      while selecting it (image a gene rectangle is divided to four
+      equal rectangles). For example double clicking on the north-west
+      quarter of the gene sets it to show next samples on the right top
+      side of it.<br>
+    </p>
+    <img alt="multiple-sample view"
+      src="file:///Users/Behrooz/PiiLFiles/images/multipleSampleView.png"
+      height="700" width="1050"><br>
+    If you hover the mouse over the extended rectangles, a tooltip shows
+    the sample that rectangle is representing.<br>
+    You can right-click on any of the expanded genes and choose
+    Single-sample view to undo the expansion. To go back to
+    Single-sample view for all the expanded genes (the ones in
+    multiple-sample view), select <b><big>Tools -&gt; Show
+        single-sample view for all genes</big>.</b><br>
+    <h3><a href="file:///Users/Behrooz/PiiLFiles/index.html#How_to">back
+        to top</a></h3>
     <p><br>
     </p>
-    <h2>Load a list of genes to be highlighted in a target pathway</h2>
+    <h2><a name="Group-wise_view_"></a>Group-wise view</h2>
+    <p>Having loaded the samples information file, the values of
+      methylation/expression of each gene can be shown in a group-wise
+      manner. Samples can be grouped by one of the columns of the
+      samples information file. To see the pathway in Group-wise view
+      select <b><big>Tools -&gt; Group-wise view for all/selected
+          genes. </big></b>To go back to Single-sample view, select <b><big>Tools
+          -&gt; Show single-sample view for all genes</big>.<br>
+      </b></p>
+    <img alt="groupingForm"
+      src="images/groupingForm.png"
+      height="240" width="800">
+    <p>The grouping shows the average methylation/expression over the
+      samples belonging to each group. The samples grouping is
+      summerized with the name of each group and number of samples in
+      that group in the parenthesis. <br>
+      For the expression data, there are two options:<br>
+      1) comparing the average expression value of the samples of each
+      group to the average of all samples.<br>
+      2) comparing the average expression value of the samples of each
+      group, with the average of the samples belonging to a group chosen
+      as the 'base group'.<br>
+    </p>
+    <img alt="sampleGroups"
+      src="images/sampleGrouping.png"
+      height="700" width="1050">
+    <h3><a href="#How_to">back to top</a></h3>
+    <br>
+    <h2> </h2>
+    <h2><a name="Load_a_list_of_genes_to_be_highlighted"></a>Highlight a
+      list of genes in a target pathway</h2>
     <p>If you have a list of genes and want to check the overlap of this
       list with a pathway of interest, first open the pathway and then
       select <b><big>Load -&gt; List of genes</big> </b>to load your
@@ -640,6 +734,8 @@
 
 
 
+
+
     can choose a file that keeps this summary.<br>
     &nbsp;<br>
     <h3><a href="#How_to">back to top</a></h3>
@@ -662,32 +758,7 @@
     <h3><b><a href="#How_to">back to top</a></b></h3>
     <p><br>
     </p>
-    <h2><a name="Multiple-sample_view"></a><b>Multiple-sample view</b></h2>
-    <p>This function visualizes the metadata for the current sample and
-      the next 10 samples, for the selected genes. If the number of
-      samples from the current one to the end of the sample set is less
-      than 10, as many as possible are displayed.<br>
-      To select a gene that is color-coded (i.e. has some metadata
-      loaded), double click on the gene rectangle. The selected genes'
-      borders turn to yellow. <br>
-      Hint: To choose the direction of expansion for multiple-sample
-      view, double-click on your desired quarter of the gene rectangle
-      while selecting it (image a gene rectangle is divided to four
-      equal rectangles). For example double clicking on the north-west
-      quarter of the gene sets it to show next samples on the right top
-      side of it.<br>
-    </p>
-    <img alt="multiple-sample view" src="images/multipleSampleView.png"
-      height="700" width="1050"><br>
-    If you hover the mouse over the extended rectangles, a tooltip shows
-    the sample that rectangle is representing.<br>
-    You can right-click on any of the expanded genes and choose
-    Single-sample view to undo the expansion. To go back to
-    Single-sample view for all the expanded genes (the ones in
-    multiple-sample view), select <b><big>Tools -&gt; Show
-        single-sample view for all genes</big>.</b><br>
-    <br>
-    <h3><a href="#How_to">back to top</a></h3>
+    <h2><a name="Multiple-sample_view"></a></h2>
     <p><br>
     </p>
     <h2><a name="Cite_us_"></a>Cite us<br>
@@ -696,7 +767,8 @@
     <h3><a href="#How_to">back to top</a></h3>
     <p><br>
     </p>
-    <h2><a name="What_the_name_PiiL_means"></a>What the name PiiL means</h2>
+    <h2><a name="What_the_name_PiiL_means"></a>Decode the name "PiiL"<br>
+    </h2>
     <p>Look at the logo carefully. Do you recognize a cute elephant
       there?! Piil (pronounced as meal) means elephant in Persian (with
       Sanskrit origin). And on a chess board the chessman called bishop
