new feature highlighted

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       <h3><a href="#Navigate_through_samples_">Navigate through samples</a></h3>
       <h3><a href="#Right-click_menu_options_">Right-click menu options</a></h3>
       <h3><a href="#Multiple-sample_view_">Multiple-sample view</a></h3>
-      <h3><a href="#Group-wise_view_">Group-wise view</a></h3>
+      <h3><a href="#Group-wise_view_">Group-wise view <font
+            color="#ff0000">(NEW)</font><br>
+        </a></h3>
       <h3><a href="#Load_a_list_of_genes_to_be_highlighted">Highlight a
           set of genes in a pathway</a></h3>
       <h3><a href="#Export_pathway_to_image_">Export pathway to image</a></h3>
@@ -137,6 +139,7 @@
 
 
 
+
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -176,9 +179,11 @@
 
 
 
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -273,6 +278,7 @@
 
 
 
+
           -&gt; Methylation</big>.</b><br>
     </p>
     <img alt="load methylation" src="images/loadMethylation.png"
@@ -342,12 +348,14 @@
 
 
 
+
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -473,6 +481,7 @@
 
 
 
+
           -&gt; Gene Expression</big>.</b><br>
     </p>
     <br>
@@ -530,13 +539,13 @@
       explanation (tooltip) is shown when hovering and staying over side
       panel items with the mouse.<br>
     </p>
-    <img alt="navigate"
-      src="images/navigateSamples.png"
-      height="700" width="1050">
+    <img alt="navigate" src="images/navigateSamples.png" height="700"
+      width="1050">
     <h3><a href="#How_to">back to top</a></h3>
-    <h2><a name="Right-click_menu_options_"></a></h2>
-    <br>
-    <h2>Right-click menu options</h2>
+    <p><br>
+    </p>
+    <h2><a name="Right-click_menu_options_"></a>Right-click menu options
+    </h2>
     <p>A menu is available for all the genes when you right-click on the
       gene rectangle. The first option is <b><big>Check this gene on
           ...</big> </b>which is enabled for all the genes. This opens
@@ -546,6 +555,7 @@
     <img alt="right-click menu options" src="images/rightClickMenu.png"
       height="700" width="1050">
     <p>The second option <big><b>Histogram for all samples </b></big>makes
+
 
 
 
@@ -628,8 +638,7 @@
       quarter of the gene sets it to show next samples on the right top
       side of it.<br>
     </p>
-    <img alt="multiple-sample view"
-      src="images/multipleSampleView.png"
+    <img alt="multiple-sample view" src="images/multipleSampleView.png"
       height="700" width="1050"><br>
     If you hover the mouse over the extended rectangles, a tooltip shows
     the sample that rectangle is representing.<br>
@@ -649,11 +658,11 @@
       samples information file. To see the pathway in Group-wise view
       select <b><big>Tools -&gt; Group-wise view for all/selected
           genes. </big></b>To go back to Single-sample view, select <b><big>Tools
+
           -&gt; Show single-sample view for all genes</big>.<br>
       </b></p>
-    <img alt="groupingForm"
-      src="images/groupingForm.png"
-      height="240" width="800">
+    <img alt="groupingForm" src="images/groupingForm.png" height="240"
+      width="800">
     <p>The grouping shows the average methylation/expression over the
       samples belonging to each group. The samples grouping is
       summerized with the name of each group and number of samples in
@@ -665,9 +674,8 @@
       group, with the average of the samples belonging to a group chosen
       as the 'base group'.<br>
     </p>
-    <img alt="sampleGroups"
-      src="images/sampleGrouping.png"
-      height="700" width="1050">
+    <img alt="sampleGroups" src="images/sampleGrouping.png" height="700"
+      width="1050">
     <h3><a href="#How_to">back to top</a></h3>
     <br>
     <h2> </h2>
@@ -736,6 +744,7 @@
 
 
 
+
     can choose a file that keeps this summary.<br>
     &nbsp;<br>
     <h3><a href="#How_to">back to top</a></h3>
@@ -756,9 +765,6 @@
           PiiL</big>.<br>
       </b></p>
     <h3><b><a href="#How_to">back to top</a></b></h3>
-    <p><br>
-    </p>
-    <h2><a name="Multiple-sample_view"></a></h2>
     <p><br>
     </p>
     <h2><a name="Cite_us_"></a>Cite us<br>
