back to top fixed

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
 
 
+
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -180,9 +181,11 @@
 
 
 
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -279,6 +282,7 @@
 
 
 
+
           -&gt; Methylation</big>.</b><br>
     </p>
     <img alt="load methylation" src="images/loadMethylation.png"
@@ -349,12 +353,14 @@
 
 
 
+
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -445,6 +451,7 @@
     <p><br>
       To load your gene expression data, you can either click on New or
       any of the previously loaded expression files listed under <b><big>Load
+
 
 
 
@@ -592,6 +599,7 @@
 
 
 
+
       a histogram for the beta-values or expression values of all
       samples for the targeted gene. <br>
     </p>
@@ -647,8 +655,7 @@
     Single-sample view for all the expanded genes (the ones in
     multiple-sample view), select <b><big>Tools -&gt; Show
         single-sample view for all genes</big>.</b><br>
-    <h3><a href="file:///Users/Behrooz/PiiLFiles/index.html#How_to">back
-        to top</a></h3>
+    <h3><a href="#How_to">back to top</a></h3>
     <p><br>
     </p>
     <h2><a name="Group-wise_view_"></a>Group-wise view</h2>
@@ -658,6 +665,7 @@
       samples information file. To see the pathway in Group-wise view
       select <b><big>Tools -&gt; Group-wise view for all/selected
           genes. </big></b>To go back to Single-sample view, select <b><big>Tools
+
 
           -&gt; Show single-sample view for all genes</big>.<br>
       </b></p>
@@ -708,6 +716,7 @@
     each tab containing the pathway, the meta data loaded over that and
     the list of genes that were matched in each pathway. By clicking on
     <b><big>Export -&gt; List of matched genes in each pathway</big> </b>you
+
 
 
 
