--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>PiiL tutorial</title>
+    <style type="text/css">a {text-decoration: none}</style>
   </head>
   <body>
     <div align="center"><a href="http://behroozt.github.io/PiiL/"><img
@@ -14,8 +15,9 @@
         <tbody>
           <tr>
             <td valign="middle" align="center"><a
-                href="https://github.com/behroozt/PiiL/raw/master/PiiL-v0.11.jar"><font
-                  size="+1" color="#006600"><b>Latest Version .jar File</b></font></a></td>
+                href="https://github.com/behroozt/PiiL/raw/master/PiiL-v0.11.jar"
+                style="text-decoration: none"><font size="+1"
+                  color="#006600"><b>Latest Version .jar File</b></font></a></td>
             <td valign="middle" align="center"><a
                 href="https://github.com/behroozt/PiiL.git"><font
                   size="+1" color="#006600"><b>View on GitHub</b></font></a><br>
@@ -24,8 +26,9 @@
                 href="http://behroozt.github.io/PiiL/tutorial.html"><font
                   size="+1" color="#006600"><b>User Manual</b></font></a><br>
             </td>
-            <td valign="middle" align="center"><font size="+1"
-                color="#006600"><b>Get PiiLer</b></font><br>
+            <td valign="middle" align="center"><a
+                href="https://github.com/behroozt/PiiLer/archive/master.zip"><font
+                  size="+1" color="#006600"><b>Get PiiLer</b></font></a><br>
             </td>
           </tr>
         </tbody>
