--- a/tutorial.html
+++ b/tutorial.html
@@ -1,8 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>PiiL tutorial</title>
+    <style type="text/css">a {text-decoration: none}</style>
   </head>
   <body>
     <div align="center"><a href="http://behroozt.github.io/PiiL/"><img
@@ -24,8 +25,9 @@
                 href="http://behroozt.github.io/PiiL/tutorial.html"><font
                   size="+1" color="#006600"><b>User Manual</b></font></a><br>
             </td>
-            <td valign="middle" align="center"><font size="+1"
-                color="#006600"><b>Get PiiLer</b></font><br>
+            <td valign="middle" align="center"><a
+                href="https://github.com/behroozt/PiiLer/archive/master.zip"><font
+                  size="+1" color="#006600"><b>Get PiiLer</b></font></a><br>
             </td>
           </tr>
         </tbody>
@@ -68,10 +70,9 @@
       testing, from <b><a
           href="https://github.com/behroozt/PiiL/archive/master.zip">here</a></b>.
       Unzip the downloaded file. To run PiiL on Mac just double-click on
-      the .jar file.
-      For Windows and Linux platforms, open a terminal, go to the
-      directory that you have the .jar file and run "java -Xmx4096m -jar
-      PiiL-vx.xx.jar".<br>
+      the .jar file. For Windows and Linux platforms, open a terminal,
+      go to the directory that you have the .jar file and run "java
+      -Xmx4096m -jar PiiL-vx.xx.jar".<br>
     </p>
     <h3><a href="#How_to">back to top</a></h3>
     <p><br>
@@ -98,13 +99,12 @@
     <p>After opening a pathway, you can load your meta-data over that
       pathway. The CpG IDs - if the data comes from a methylation array
       - or CpG positions -if the data is from whole genome bisulphite
-      sequencing - need to be replaced with their annotated gene
-      name. Any other information (for example the CpG ID or its genomic
+      sequencing - need to be replaced with their annotated gene name.
+      Any other information (for example the CpG ID or its genomic
       region) can come after an underscore in the first column. A script
       to convert the data into this format is available here. <b>The
         first row lists the samples IDs. The beta values must be between
-        0
-        and 1</b>.<br>
+        0 and 1</b>.<br>
       A valid input file looks like the following (the column separator
       is selectable):<br>
       <br>
@@ -116,12 +116,18 @@
           <td valign="top">sampleIDS<br>
           </td>
           <td valign="top">sample1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
             <br>
           </td>
           <td valign="top">sampleN<br>
@@ -196,10 +202,11 @@
 
 
 -&gt;
-          Methylation</big>. </b>Once a methylation data
-      file is loaded, it will be listed under the <b>Load -&gt;
-        Methylation</b> menu to be
-      used for other pathways directly.<br>
+
+
+          Methylation</big>. </b>Once a methylation data file is
+      loaded, it will be listed under the <b>Load -&gt; Methylation</b>
+      menu to be used for other pathways directly.<br>
       Customization of the input file is possible via a window that
       emerges after selecting a file. If the file has been converted
       with PiiLer you can just press OK.<br>
@@ -207,16 +214,14 @@
     <img src="images/methylationInput.png" alt="methylation input"
       width="690" height="425">
     <p>The genes in the input file that match with the genes in the
-      pathway
-      are colored according to their beta values. Blue color codes the
-      hypo-methylation status (the closer the beta value is to zero the
-      color is darker blue) and red color codes the hyper-methylation
-      status (the closer the beta value is to 1 the color is darker
-      red).<br>
+      pathway are colored according to their beta values. Blue color
+      codes the hypo-methylation status (the closer the beta value is to
+      zero the color is darker blue) and red color codes the
+      hyper-methylation status (the closer the beta value is to 1 the
+      color is darker red).<br>
       The samples IDs are listed in the first combobox and the matched
       genes are listed in the second combobox where the number of
-      matches
-      is shown by the label below it. </p>
+      matches is shown by the label below it. </p>
     <img alt="load methylation" src="images/loadMethylation.png"
       width="900" height="591"><br>
     <br>
@@ -236,15 +241,13 @@
     <br>
     <blockquote><b>1) Selecting sites by standard deviation filtering</b><b>:</b>
       This option aims to filter out the CpG sites that have very little
-      variation
-      over all samples according to an adjustable threshold for the
-      standard deviation of the beta values for a site over all samples.
-      This option facilitates the visibility of the sites that differ
-      significantly between the samples; where there are multiple CpG
-      sites hitting a gene that do not vary significantly between the
-      samples and averaging them for color-coding a gene the strong
-      signal
-      is weakened. <br>
+      variation over all samples according to an adjustable threshold
+      for the standard deviation of the beta values for a site over all
+      samples. This option facilitates the visibility of the sites that
+      differ significantly between the samples; where there are multiple
+      CpG sites hitting a gene that do not vary significantly between
+      the samples and averaging them for color-coding a gene the strong
+      signal is weakened. <br>
     </blockquote>
     <blockquote><b>2) Selecting sites by genomic region name: </b>If
       the CpG sites are annotated with a genomic region, the user can
@@ -252,6 +255,8 @@
       exonic, UTR5 and so on.<b> </b><br>
     </blockquote>
     <blockquote><b>3) Selecting sites by their beta values: </b>includes
+
+
       the sites based on user defined ranges for beta-values.<br>
     </blockquote>
     <blockquote><b>4) Loading a list of pre-selected sites: </b>a list
@@ -278,22 +283,11 @@
 
 
 mso-fareast-font-family:&quot;Times
+
+
                                 New
                                 Roman&quot;;mso-bidi-font-family:&quot;Times
-
-
-
-
-
-
-
-
-
-
-
-
-New
-                                Roman&quot;;
+                                New Roman&quot;;
 mso-ansi-language:EN-US;mso-fareast-language:EN-US;mso-bidi-language:AR-SA"></span></big></big></big></big></big></big></big></big></big></big></big></big>
     </big>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -758,12 +752,16 @@ mso-hansi-theme-font:minor-latin;}
 
 
 &nbsp;
+
+
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -869,28 +867,28 @@ mso-hansi-theme-font:minor-latin;}
 
 
 -&gt;
+
+
           Gene Expression</big>.&nbsp;</b>Once a gene expression data
-      file is loaded, it will be listed under the <b>Load -&gt; Gene expression</b>
-      menu to be used for other pathways directly.<br>
+      file is loaded, it will be listed under the <b>Load -&gt; Gene
+        expression</b> menu to be used for other pathways directly.<br>
       The genes in the input file that match with the genes in the
-      pathway are
-      color-coded according to the k-fold difference between their
-      expression level and the median expression of all the samples. The
-      samples IDs are listed in the first combobox and the matched
-      genes are listed in the second combobox where the number of
-      matches
-      is shown by the label below it.<br>
+      pathway are color-coded according to the k-fold difference between
+      their expression level and the median expression of all the
+      samples. The samples IDs are listed in the first combobox and the
+      matched genes are listed in the second combobox where the number
+      of matches is shown by the label below it.<br>
     </p>
     <img alt="load expression" src="images/loadExpression.png"
       width="900" height="591"><br>
     <br>
     <br>
-    The
-    k-fold difference value is adjustable via <font size="+1"><b>Tools
-        -&gt; Manage</b></font>
-    color-coding and its default value is 4. Blue color codes the
-    over-expressed status and red color codes the under-expressed
-    status.<br>
+    The k-fold difference value is adjustable via <font size="+1"><b>Tools
+
+
+        -&gt; Manage</b></font> color-coding and its default value is 4.
+    Blue color codes the over-expressed status and red color codes the
+    under-expressed status.<br>
     <br>
     <img src="images/rangeManager.png" alt="range manager" width="640"
       height="297"><br>
@@ -947,24 +945,21 @@ mso-hansi-theme-font:minor-latin;}
     <p>A menu is available for all the genes when you right-click on the
       gene rectangle, with the following options:<br>
     </p>
-    <p><b><big>1) Check this gene on
-          ...</big> :</b> The first option is enabled for all the genes.
-      This opens
-      a tab in the default browser and checks the target gene's
-      information on your selected database: GeneCards, Pubmed or
-      Ensemble.</p>
+    <p><b><big>1) Check this gene on ...</big> :</b> The first option is
+      enabled for all the genes. This opens a tab in the default browser
+      and checks the target gene's information on your selected
+      database: GeneCards, Pubmed or Ensemble.</p>
     <img alt="right click menu" src="images/rightClickMenu.png"
       width="900" height="591"><br>
     <p><b>2)</b> <big><b>Histogram for all samples</b></big><b>:</b>
-      The second option makes
-      a histogram for the beta-values or expression values of all
-      samples for the targeted gene. <br>
+      The second option makes a histogram for the beta-values or
+      expression values of all samples for the targeted gene. <br>
     </p>
     <p><img alt="histogram" src="images/histogram.png" width="700"
         height="394">&nbsp;<br>
     </p>
-    <p><b><big>3) Barplot for raw data</big> </b>is
-      another representation of beta-values or expression values for all
+    <p><b><big>3) Barplot for raw data</big> </b>is another
+      representation of beta-values or expression values for all
       samples.<br>
     </p>
     <img alt="barplot" src="images/barplot.png" width="700" height="394"><br>
@@ -987,10 +982,12 @@ mso-hansi-theme-font:minor-latin;}
     <img alt="genomic regions" src="images/genomicRegions.png"
       width="700" height="514"><br>
     <b><font size="+1">5)</font> </b><big><b>Multiple-sample view:</b></big>
-    this is explained
-    in <a href="#Multiple-sample_view">this</a> section.<br>
+    this is explained in <a href="#Multiple-sample_view">this</a>
+    section.<br>
     <br>
     <b><font size="+1">6) Find genes with similar pattern: </font></b>using
+
+
     this option, the methylation or expression pattern of the samples
     for the selected genes are compared with the other genes in the
     pathway, or all the genes in the loaded metadata file. The Euclidean
@@ -1071,8 +1068,7 @@ mso-hansi-theme-font:minor-latin;}
         single-sample view for all genes</big>.</b><br>
     <h3><a href="file:///Users/Behrooz/PiiLFiles/index.html#How_to">back
         to top</a></h3>
-    <h2><a name="Generate_a_PiiLgrid_"></a>
-      Generate a PiiLgrid</h2>
+    <h2><a name="Generate_a_PiiLgrid_"></a> Generate a PiiLgrid</h2>
     <p>Sometimes most of genes we are interested in are not part of any
       of the KEGG pathways. In this scenario, PiiL provides a grid of
       not connected genes called <b>PiiLgrid </b>where all the
@@ -1088,8 +1084,7 @@ mso-hansi-theme-font:minor-latin;}
     </p>
     <h3><a href="#How_to">back to top</a><br>
     </h3>
-    <h2>
-    </h2>
+    <h2> </h2>
     <h2> </h2>
     <h2><a name="Load_a_list_of_genes_to_be_highlighted"></a>Highlight a
       list of genes in a targeted pathway</h2>
@@ -1173,6 +1168,8 @@ mso-hansi-theme-font:minor-latin;}
 
 
 can
+
+
     choose a file that keeps this summary.<br>
     &nbsp;<br>
     <h3><a href="#How_to">back to top</a></h3>
