jar file link updated

--- a/tutorial.html
+++ b/tutorial.html
@@ -15,7 +15,7 @@
         <tbody>
           <tr>
             <td valign="middle" align="center"><a
-                href="https://github.com/behroozt/PiiL/raw/master/PiiL-v0.11.jar"><font
+                href="https://github.com/behroozt/PiiL/raw/master/PiiL-v0.12.jar"><font
                   size="+1" color="#006600"><b>Latest Version .jar File</b></font></a></td>
             <td valign="middle" align="center"><a
                 href="https://github.com/behroozt/PiiL.git"><font
@@ -118,14 +118,17 @@
           <td valign="top">sample1&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
+
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
+
             <br>
           </td>
           <td valign="top">...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
             <br>
@@ -204,6 +207,7 @@
 -&gt;
 
 
+
           Methylation</big>. </b>Once a methylation data file is
       loaded, it will be listed under the <b>Load -&gt; Methylation</b>
       menu to be used for other pathways directly.<br>
@@ -257,6 +261,7 @@
     <blockquote><b>3) Selecting sites by their beta values: </b>includes
 
 
+
       the sites based on user defined ranges for beta-values.<br>
     </blockquote>
     <blockquote><b>4) Loading a list of pre-selected sites: </b>a list
@@ -283,6 +288,7 @@
 
 
 mso-fareast-font-family:&quot;Times
+
 
 
                                 New
@@ -754,12 +760,14 @@ mso-hansi-theme-font:minor-latin;}
 &nbsp;
 
 
+
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <br>
           </td>
           <td valign="top">sample2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
             <br>
@@ -869,6 +877,7 @@ mso-hansi-theme-font:minor-latin;}
 -&gt;
 
 
+
           Gene Expression</big>.&nbsp;</b>Once a gene expression data
       file is loaded, it will be listed under the <b>Load -&gt; Gene
         expression</b> menu to be used for other pathways directly.<br>
@@ -884,6 +893,7 @@ mso-hansi-theme-font:minor-latin;}
     <br>
     <br>
     The k-fold difference value is adjustable via <font size="+1"><b>Tools
+
 
 
         -&gt; Manage</b></font> color-coding and its default value is 4.
@@ -988,6 +998,7 @@ mso-hansi-theme-font:minor-latin;}
     <b><font size="+1">6) Find genes with similar pattern: </font></b>using
 
 
+
     this option, the methylation or expression pattern of the samples
     for the selected genes are compared with the other genes in the
     pathway, or all the genes in the loaded metadata file. The Euclidean
@@ -1037,7 +1048,7 @@ mso-hansi-theme-font:minor-latin;}
     In the group-wise view mode, barplot and histogram are also shown
     with the selected grouping.<br>
     <br>
-    <img src="images/barplotGrouped.png" alt="barplot grp" width="570"
+    <img src="imges/barplotGrouped.png" alt="barplot grp" width="570"
       height="321"><img src="images/histogramGrouped.png" alt="histogram
       grp" width="570" height="321"><br>
     <h3><a href="#How_to">back to top</a></h3>
@@ -1168,6 +1179,7 @@ mso-hansi-theme-font:minor-latin;}
 
 
 can
+
 
 
     choose a file that keeps this summary.<br>
