--- a/index.html
+++ b/index.html
@@ -37,21 +37,29 @@
     </div>
     <h1 align="left">Welcome to PiiL!</h1>
     <h1> </h1>
-    PiiL is an open-source (<b>the source code is available </b><b><a
-        href="https://github.com/behroozt/PiiL.git">here</a></b>) and
-    biologist-friendly tool. You can easily <i>PiiL</i> your data; i.e.
-    load your DNA methylation and/or gene expression data over any of
-    the KEGG pathways and let PiiL color it for you,&nbsp; in order to
-    identify or discover genes with differential methylation /
+    PiiL is an open-source (<b><a
+        href="https://github.com/behroozt/PiiL.git">the source code</a></b>)
+    and biologist-friendly tool. You can easily <i>PiiL</i> your data;
+    i.e. load your DNA methylation and/or gene expression data over any
+    of the KEGG pathways and let PiiL color it for you,&nbsp; in order
+    to identify or discover genes with differential methylation /
     expression patterns. DNA methylation data can be from Illumina's
     methylation arrays or RRBS. PiiL provides a set of analytical
     features facilitating quick assessment of specific patterns, and
-    selecting subsets of CpG sites and examine thier impact on
+    selecting subsets of CpG sites and examine their impact on
     expression of the host gene. PiiL also produces vector quality
     images of the pathways and their visualized loaded data or a list of
     genes highlighted in the pathway that are suitable to be used in
     publications.<br>
-    <p> <i>PiiL </i>your data and cite us, please.<br>
+    <br>
+    Some <b>data for testing</b> the tool is downloadable <b><a
+        href="https://github.com/behroozt/PiiL/tree/master/DataForTesting">here</a></b>.
+    If you have your DNA methylation data with CpG sites on the rows and
+    beta-values for each sample on the columns, you can use <a
+      href="https://github.com/behroozt/PiiLer/archive/master.zip"><b><i>PiiLer</i></b></a>
+    to convert your DNA methylation data to PiiL format.<br>
+    <p> <i>PiiL </i>your data and cite us (manuscript submitted),
+      please.<br>
     </p>
     <div align="center"><img src="images/PiiLnutshell.png"
         alt="nutshell" width="900" height="592"><br>
