--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <div align="center"><a href="http://behroozt.github.io/PiiL/"><img
           alt="logo" src="images/tutorialHeader.png" width="614"
-          border="0" height="370"></a><br>
+          height="370" border="0"></a><br>
       <br>
-      <table width="647" cellspacing="2" cellpadding="10" border="0"
-        bgcolor="#ffffff" height="61">
+      <table width="647" height="61" cellspacing="2" cellpadding="10"
+        border="0" bgcolor="#ffffff">
         <tbody>
           <tr>
             <td valign="middle" align="center"><a
@@ -58,7 +58,8 @@
     beta-values for each sample on the columns, you can use <a
       href="https://github.com/behroozt/PiiLer/archive/master.zip"><b><i>PiiLer</i></b></a>
     to convert your DNA methylation data to PiiL format.<br>
-    <p> <i>PiiL </i>your data and cite us (manuscript submitted),
+    <p> <i>PiiL </i>your data and cite our <b><a
+href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3950-9">publication</a></b>,
       please.<br>
     </p>
     <div align="center"><img src="images/PiiLnutshell.png"
